# agent-prompt-vars

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_prompt_vars/: __init__.py  core.py
src/agent_prompt_vars.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_prompt_vars.py
